--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
   "name": "front-end_website",
   "version": "1.0.0",
-  "description": "This is the front-end_website Code!",
-  "main": "index.js",
+  "description": "Here is all front end coe!",
+  "main": "\u001b[A\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[Cd",
   "scripts": {
-   "compile:sass": "sass --watch scss:assets/css"
+    "compile:sass": "sass scss:assets/css"
   },
-  "keywords": [
-    "Bootstrap"
-  ],
-  "author": "Leo Fielstette",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/startup-LL/front-end_website.git"
+  },
+  "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/startup-LL/front-end_website/issues"
+  },
+  "homepage": "https://github.com/startup-LL/front-end_website#readme",
   "devDependencies": {
-    "sass": "^1.32.12"
+    "sass": "^1.44.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.3",
-    "bootstrap": "^5.0.0"
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "autoprefixer": "^10.4.0",
+    "bootstrap": "^5.1.3",
+    "postcss-cli": "^9.0.2"
   }
 }
