--- a/package.json
+++ b/package.json
@@ -1,28 +1,25 @@
 {
-  "name": "front-end_website",
+  "name": "bootstrap-v5",
   "version": "1.0.0",
-  "description": "Here is all front end coe!",
-  "main": "\u001b[A\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[C\u001b[Cd",
+  "description": "Learning bootstrap v5 with sass",
+  "main": "index.js",
   "scripts": {
-    "compile:sass": "sass scss:assets/css"
+   "compile:sass": "sass --watch scss:assets/css"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/startup-LL/front-end_website.git"
-  },
-  "author": "",
+  "keywords": [
+    "Bootstrap",
+    "bootstrap-v5",
+    "sass",
+    "learn-bootstrap",
+    "learn-sass"
+  ],
+  "author": "Patrick Muriungi",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/startup-LL/front-end_website/issues"
-  },
-  "homepage": "https://github.com/startup-LL/front-end_website#readme",
   "devDependencies": {
-    "sass": "^1.44.0"
+    "sass": "^1.32.12"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "autoprefixer": "^10.4.0",
-    "bootstrap": "^5.1.3",
-    "postcss-cli": "^9.0.2"
+    "@fortawesome/fontawesome-free": "^5.15.3",
+    "bootstrap": "^5.0.0"
   }
 }
