--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   "compile:sass": "sass --watch scss:assets/css"
+    "compile:sass": "sass --watch scss:assets/css",
+    "start": "nodemon app.js"
   },
   "keywords": [
     "front-end",
@@ -23,6 +24,7 @@
   "author": "Leo Fielstette",
   "license": "Apache License 2.0",
   "devDependencies": {
+    "nodemon": "^2.0.15",
     "sass": "^1.32.12"
   },
   "dependencies": {
