--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "sass --watch scss:assets/css",
-    "start": "nodemon app.js"
+    "compile:sass": "sass --watch scss:assets/css"
   },
   "keywords": [
     "front-end",
