--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
-    "bootstrap": "^5.0.0"
+    "bootstrap": "^5.0.0",
+    "express": "^4.17.2"
   }
 }
