--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "websitesll-front-end",
   "version": "1.0.0",
-  "description": "",
+  "description": "PLACEHOLDER",
   "main": "index.js",
   "scripts": {
     "compile:sass": "sass --watch scss:assets/css"
@@ -23,11 +23,19 @@
   "author": "Leo Fielstette",
   "license": "Apache License 2.0",
   "devDependencies": {
-    "sass": "^1.32.12"
+    "sass": "^1.49.7"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "bootstrap": "^5.0.0",
     "express": "^4.17.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Websites-LL/websitesll-front-end.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Websites-LL/websitesll-front-end/issues"
+  },
+  "homepage": "https://github.com/Websites-LL/websitesll-front-end#readme"
 }
